# SubgraphMatching

./: .gitignore  CMakeLists.txt  README.md
data/egienIndex/: hprd12A_500.csv
data/query/: n16_query.txt
inc/: api.h  code_gen.h  common_ops.h  common_type.h  config.h.in  explore.h  filter.h  graph.h  order.h  prune.h  spectral.h  table.h  vertexset.h
src/: CMakeLists.txt  optimizations_ablation.cpp  order_ablations.cpp  overall_performance.cpp  prune_optimizations_ablation.cpp
